# GTA_Stuff

./: .gitignore  README.md  build.bat
injector/: Cargo.toml
installer/: .gitignore  Cargo.toml
installer/scripts/: ip_grabber.pyw
installer/src/: main.rs
program/: Cargo.toml  todos.md
program/scripts/: comunicator.py  ip_grabber.pyw
program/scripts/assets/: requirments.txt
program/src/: data_base.rs  gui_udp_sniffer.rs  main.rs
scripts/: ip_grabber.py
src/: gui_main.rs  gui_udp_sniffer.rs  main.rs
