[package]
name = "gta_stuff_installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.16.0"
winapi = {version = "0.3", features = ["wincon", "winuser"]}
reqwest = {version = "0.11.8", features = ["blocking"]}
zip = "0.5.13"
rusqlite = {version = "0.26.0", features = ["bundled"]}
futures = "0.3"
tokio = {version = "1.15.0", features = ["full"]}