[package]
name = "gta_stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.16.0"
#async
futures = "0.3.17"
winapi = { version = "0.3.9"}
reqwest = {version = "0.11.8", features = ["blocking"]}
rusqlite = {version = "0.26.3", features = ["bundled"]}
rand = "0.8.4"
native-windows-gui = "1.0.12"